--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "Mark Miscavage",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --no-timeouts --reporter spec \"./tests/lib/*.js\" \"./tests/lib/**/*.js\""
+    "test": "mocha --no-timeouts --reporter spec \"./tests/lib/*.js\" \"./tests/lib/**/*.js\"",
+    "generate-types": "tsc",
+    "prepublishOnly": "npm test && rm -rf lib && cp -r src lib && npm run generate-types"
   },
   "repository": {
     "type": "git",
@@ -29,7 +31,8 @@
     "api-client"
   ],
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.2.2"
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "typescript": "^4.4.4"
   }
 }
