--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "coingecko-api",
-  "version": "1.0.10",
-  "description": "A Node.js wrapper for the CoinGecko API with no dependencies.",
+  "name": "coingecko-api-typed",
+  "version": "1.0.11",
+  "description": "A Node.js wrapper for the CoinGecko API with no dependencies (with generated inline d.ts typings!).",
   "main": "index.js",
-  "homepage": "https://github.com/miscavage/CoinGecko-API#readme",
+  "homepage": "https://github.com/stu-dev/CoinGecko-API",
   "author": "Mark Miscavage",
   "license": "MIT",
   "scripts": {
@@ -13,10 +13,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/miscavage/CoinGecko-API.git"
+    "url": "git+https://github.com/stu-dev/CoinGecko-API.git"
   },
   "bugs": {
-    "url": "https://github.com/miscavage/CoinGecko-API/issues"
+    "url": "https://github.com/stu-dev/CoinGecko-API/issues"
   },
   "keywords": [
     "coingecko",
