--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
     "typescript": "^4.4.4"
-  }
+  },
+  "files": [
+    "/lib"
+  ],
+  "types": "lib/index.d.ts"
 }
