--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "coingecko-api-typed",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "A Node.js wrapper for the CoinGecko API with no dependencies (with generated inline d.ts typings!).",
-  "main": "index.js",
+  "main": "lib/index.js",
   "homepage": "https://github.com/stu-dev/CoinGecko-API",
   "author": "Mark Miscavage",
   "license": "MIT",
