--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   // Change this to match your project
   "include": ["src/**/*"],
   "compilerOptions": {
+    "module": "commonjs",
     // Tells TypeScript to read JS files, as
     // normally they are ignored as source files
     "allowJs": true,
@@ -13,6 +14,6 @@
     // Types should go into this directory.
     // Removing this would place the .d.ts files
     // next to the .js files
-    "outFile": "lib/index.d.ts"
+    "outDir": "lib"
   }
 }
