--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "coingecko-api-typed",
+  "name": "coingecko-api-typed-pro",
   "version": "1.0.19",
-  "description": "A Node.js wrapper for the CoinGecko API with no dependencies (with generated inline d.ts typings!).",
+  "description": "A Node.js wrapper for the CoinGecko API with no dependencies with generated inline d.ts typings and pro account support.",
   "main": "lib/index.js",
-  "homepage": "https://github.com/stu-dev/CoinGecko-API",
-  "author": "Mark Miscavage",
+  "homepage": "https://github.com/tdipadova3rd/CoinGecko-API",
+  "author": "Mark Miscavage, Stuart Gray, & Tony DiPadova",
   "license": "MIT",
   "scripts": {
     "test": "mocha --no-timeouts --reporter spec \"./tests/*.js\" \"./tests/**/*.js\"",
@@ -28,7 +28,8 @@
     "nodejs",
     "npm",
     "javascript",
-    "api-client"
+    "api-client",
+    "pro-account"
   ],
   "devDependencies": {
     "chai": "^4.3.4",
